--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,144 @@
-html, body {
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-LightItalic-Pi.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-LightItalic-Latin3.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-LightItalic-Latin2.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-LightItalic-Latin1.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-Light-Pi.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-Light-Latin1.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-Light-Latin3.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../woff2/IBMPlexMono-Light-Latin2.woff2") format("woff2");
+}
+
+html,
+body {
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
 
 canvas {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .hi {
-    padding: 10%;
+  padding: 6% 6% 0;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
-    font-family: CircularStd-Black, Helvetica, Arial, sans-serif;
-    color: white;
-    font-size: 9em;
-    margin-bottom: 0px;
+  font-family: Helvetica, Arial, sans-serif;
+  color: white;
+  font-size: 5em;
+  margin-bottom: 0px;
+  margin-top: 20px;
+  margin-left: -7px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+}
+
+.links p {
+  font-style: italic;
+  display: flex;
+  margin: 6px 0;
+}
+
+.links span {
+  margin-right: 10px;
+}
+
+a {
+  font-family: "IBM Plex Mono";
+  color: salmon;
+  text-decoration: none;
+  line-height: 30px;
+  padding: 5px 0;
+}
+a span {
+  display: none;
+}
+italic {
+  font-style: italic;
+}
+
+a:hover span {
+  display: block;
+  position: fixed;
+  overflow: hidden;
+  z-index: 1;
+}
+
+em {
+font-style: italic;
+}
+.hi a:last-child {
+  display: table;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 p {
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-
+  color: white;
+  font-family: "IBM Plex Mono";
 }
 
 .test {
-    width: 100px;
-    height: 100px;
-    background-color: rgb(30, 67, 137)
+  width: 100px;
+  height: 100px;
+  background-color: rgb(30, 67, 137);
 }
