--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,12 +54,35 @@
   src: url("../woff2/IBMPlexMono-Light-Latin2.woff2") format("woff2");
 }
 
+@font-face {
+  font-family: "GT America";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../woff2/GT-America-Extended-Black.woff") format("woff");
+}
+
+@font-face {
+  font-family: "GT America";
+  font-style: normal;
+  font-weight: 100;
+  src: url("../woff2/GT-America-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Presicav";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../woff2/Presicav.woff") format("woff");
+}
+
+
 html,
 body {
   width: 100vw;
   height: 100vh;
   margin: 0;
   padding: 0;
+  /* background-color: black; */
 }
 
 canvas {
@@ -75,23 +98,32 @@ canvas {
   flex-direction: column;
 }
 
-h1 {
-  font-family: Helvetica, Arial, sans-serif;
-  color: white;
+.hi > h1 {
+  /* font-family: Helvetica, Arial, sans-serif; */
+  font-family: "GT America";
+  color: orangered;
   font-size: 5em;
   margin-bottom: 0px;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-left: -7px;
+}
+
+.hi > h3 {
+  font-family: "Presicav";
+  margin-top: 0px;  
+  color: white;
 }
 
 .links {
   display: flex;
   flex-direction: column;
   padding-left: 20px;
+  margin-top: 10px;
 }
 
 .links p {
   font-style: italic;
+  line-height: 24px;
   display: flex;
   margin: 6px 0;
 }
@@ -99,13 +131,34 @@ h1 {
 .links span {
   margin-right: 10px;
 }
+.links ul {
+  display: flex;
+  font-family: "IBM Plex Mono";
+  padding: 0;
+  list-style: none;
+}
+
+.links ul li {
+  color: white;
+  flex-basis: auto;
+  display: flex;
+  justify-content: center;
+  border-radius: 2px;
+  /* border: 1.5px solid lightblue; */
+  background-color: rgb(100,169,107);
+  margin-right: 15px;
+  font-size: 10px;
+  padding: 4px;
+  cursor: default;
+}
 
 a {
   font-family: "IBM Plex Mono";
-  color: salmon;
+  color: rgb(100,169,107);
   text-decoration: none;
   line-height: 30px;
   padding: 5px 0;
+  font-weight: bold;
 }
 a span {
   display: none;
@@ -122,7 +175,7 @@ a:hover span {
 }
 
 em {
-font-style: italic;
+  font-style: italic;
 }
 .hi a:last-child {
   display: table;
