--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,66 @@
   src: url("../woff2/IBMPlexMono-Light-Latin2.woff2") format("woff2");
 }
 
+
+
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBoldItalic-Pi.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBoldItalic-Latin3.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBoldItalic-Latin2.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBoldItalic-Latin1.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBold-Pi.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBold-Latin1.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBold-Latin3.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../woff2/IBMPlexMono-SemiBold-Latin2.woff2") format("woff2");
+}
+
+
 @font-face {
   font-family: "GT America";
   font-style: normal;
@@ -158,7 +218,7 @@ a {
   text-decoration: none;
   line-height: 30px;
   padding: 5px 0;
-  font-weight: bold;
+  font-weight: 600;
 }
 a span {
   display: none;
