--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ canvas {
 }
 
 .hi {
-  padding: 4% 6% 0;
+  padding: 4% 10px 0 6%;
   display: flex;
   flex-direction: column;
 }
@@ -196,6 +196,7 @@ canvas {
   font-family: "IBM Plex Mono";
   padding: 0;
   list-style: none;
+  margin-top: 10px;
 }
 
 .links ul li {
