li colour changed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,13 +200,13 @@ canvas {
 }
 
 .links ul li {
-  color: white;
+  color: palegreen;
   flex-basis: auto;
   display: flex;
   justify-content: center;
   border-radius: 2px;
   /* border: 1.5px solid lightblue; */
-  background-color: rgb(100,169,107);
+  background-color:slategray;
   margin-right: 15px;
   font-size: 10px;
   padding: 4px;
